
[TestConvertAndExportCVEToOSV/disputed_record - 1]
{
  "database_specific": {
    "cna_assigner": "unknown",
    "isDisputed": true,
    "osv_generated_from": "unknown"
  },
  "details": "A disputed vulnerability.",
  "id": "CVE-2025-9999",
  "modified": "2025-05-04T07:20:46.575Z",
  "published": "2025-05-04T07:20:46.575Z",
  "references": [
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2025-9999"
    }
  ],
  "schema_version": "1.7.5"
}
---

[TestConvertAndExportCVEToOSV/CVE-2025-1110 - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "18.0"
              },
              {
                "fixed": "18.0.1"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "504fd9e5236e13d674e051c6b8a1e9892b371c58"
            },
            {
              "fixed": "3426be1b93852c5358240c5df40970c0ddfbdb2a"
            }
          ],
          "repo": "https://gitlab.com/gitlab-org/gitlab",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "GitLab",
    "cwe_ids": [
      "CWE-1220"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "An issue has been discovered in GitLab CE/EE affecting all versions from 18.0 before 18.0.1. In certain circumstances, a user with limited permissions could access Job Data via a crafted GraphQL query.",
  "id": "CVE-2025-1110",
  "modified": "2025-05-22T14:17:44.379Z",
  "published": "2025-05-22T14:02:31.385Z",
  "references": [
    {
      "type": "PACKAGE",
      "url": "git://git@gitlab.com:gitlab-org/gitlab.git"
    },
    {
      "type": "REPORT",
      "url": "https://gitlab.com/gitlab-org/gitlab/-/issues/517693"
    },
    {
      "type": "REPORT",
      "url": "https://hackerone.com/reports/2972576"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2025-1110"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:H/UI:N/S:U/C:L/I:N/A:N",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Insufficient Granularity of Access Control in GitLab"
}
---

[TestConvertAndExportCVEToOSV/CVE-2024-21634 - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "fixed": "1.10.5"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "fixed": "019a6117fb99131f74f92ecf462169613234abbf"
            }
          ],
          "repo": "https://github.com/amazon-ion/ion-java",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-264p-99wq-f4j6"
  ],
  "database_specific": {
    "cna_assigner": "GitHub_M",
    "cwe_ids": [
      "CWE-770"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Amazon Ion is a Java implementation of the Ion data notation. Prior to version 1.10.5, a potential denial-of-service issue exists in `ion-java` for applications that use `ion-java` to deserialize Ion text encoded data, or deserialize Ion text or binary encoded data into the `IonValue` model and then invoke certain `IonValue` methods on that in-memory representation. An actor could craft Ion data that, when loaded by the affected application and/or processed using the `IonValue` model, results in a `StackOverflowError` originating from the `ion-java` library. The patch is included in `ion-java` 1.10.5. As a workaround, do not load data which originated from an untrusted source or that could have been tampered with.",
  "id": "CVE-2024-21634",
  "modified": "2025-06-16T19:45:37.088Z",
  "published": "2024-01-03T22:46:03.585Z",
  "references": [
    {
      "type": "ADVISORY",
      "url": "https://github.com/amazon-ion/ion-java/security/advisories/GHSA-264p-99wq-f4j6"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2024-21634"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Ion Java StackOverflow vulnerability"
}
---

[TestConvertAndExportCVEToOSV/CVE-2025-21772 - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "events": [
            {
              "introduced": "1da177e4c3f41524e886b7f1b8a0c1fc7321cac2"
            },
            {
              "fixed": "a3e77da9f843e4ab93917d30c314f0283e28c124"
            },
            {
              "fixed": "213ba5bd81b7e97ac6e6190b8f3bc6ba76123625"
            },
            {
              "fixed": "40a35d14f3c0dc72b689061ec72fc9b193f37d1f"
            },
            {
              "fixed": "27a39d006f85e869be68c1d5d2ce05e5d6445bf5"
            },
            {
              "fixed": "92527100be38ede924768f4277450dfe8a40e16b"
            },
            {
              "fixed": "6578717ebca91678131d2b1f4ba4258e60536e9f"
            },
            {
              "fixed": "7fa9706722882f634090bfc9af642bf9ed719e27"
            },
            {
              "fixed": "80e648042e512d5a767da251d44132553fe04ae0"
            }
          ],
          "repo": "https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git",
          "type": "GIT"
        }
      ]
    },
    {
      "package": {
        "ecosystem": "Linux",
        "name": "Kernel"
      },
      "ranges": [
        {
          "events": [
            {
              "introduced": "0"
            },
            {
              "fixed": "5.4.291"
            }
          ],
          "type": "ECOSYSTEM"
        },
        {
          "events": [
            {
              "introduced": "5.5.0"
            },
            {
              "fixed": "5.10.235"
            }
          ],
          "type": "ECOSYSTEM"
        },
        {
          "events": [
            {
              "introduced": "5.11.0"
            },
            {
              "fixed": "5.15.179"
            }
          ],
          "type": "ECOSYSTEM"
        },
        {
          "events": [
            {
              "introduced": "5.16.0"
            },
            {
              "fixed": "6.1.129"
            }
          ],
          "type": "ECOSYSTEM"
        },
        {
          "events": [
            {
              "introduced": "6.2.0"
            },
            {
              "fixed": "6.6.79"
            }
          ],
          "type": "ECOSYSTEM"
        },
        {
          "events": [
            {
              "introduced": "6.7.0"
            },
            {
              "fixed": "6.12.16"
            }
          ],
          "type": "ECOSYSTEM"
        },
        {
          "events": [
            {
              "introduced": "6.13.0"
            },
            {
              "fixed": "6.13.4"
            }
          ],
          "type": "ECOSYSTEM"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "Linux",
    "osv_generated_from": "unknown"
  },
  "details": "In the Linux kernel, the following vulnerability has been resolved:\n\npartitions: mac: fix handling of bogus partition table\n\nFix several issues in partition probing:\n\n - The bailout for a bad partoffset must use put_dev_sector(), since the\n   preceding read_part_sector() succeeded.\n - If the partition table claims a silly sector size like 0xfff bytes\n   (which results in partition table entries straddling sector boundaries),\n   bail out instead of accessing out-of-bounds memory.\n - We must not assume that the partition table contains proper NUL\n   termination - use strnlen() and strncmp() instead of strlen() and\n   strcmp().",
  "id": "CVE-2025-21772",
  "modified": "2025-05-04T07:20:46.575Z",
  "published": "2025-02-27T02:18:19.528Z",
  "references": [
    {
      "type": "PACKAGE",
      "url": "https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/213ba5bd81b7e97ac6e6190b8f3bc6ba76123625"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/27a39d006f85e869be68c1d5d2ce05e5d6445bf5"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/40a35d14f3c0dc72b689061ec72fc9b193f37d1f"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/6578717ebca91678131d2b1f4ba4258e60536e9f"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/7fa9706722882f634090bfc9af642bf9ed719e27"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/80e648042e512d5a767da251d44132553fe04ae0"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/92527100be38ede924768f4277450dfe8a40e16b"
    },
    {
      "type": "WEB",
      "url": "https://git.kernel.org/stable/c/a3e77da9f843e4ab93917d30c314f0283e28c124"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2025-21772"
    }
  ],
  "schema_version": "1.7.5",
  "summary": "partitions: mac: fix handling of bogus partition table"
}
---

[TestCVE5Snapshot - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "fixed": "2.0.0-next.193"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "fixed": "eeda4f90af57368584fa97250cbb0d5bf0a5e16e"
            }
          ],
          "repo": "https://github.com/lobehub/lobehub",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-j7xp-4mg9-x28r"
  ],
  "database_specific": {
    "cna_assigner": "GitHub_M",
    "cwe_ids": [
      "CWE-284",
      "CWE-639",
      "CWE-862",
      "CWE-915"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "LobeChat is an open source chat application platform. Prior to version 2.0.0-next.193, `knowledgeBase.removeFilesFromKnowledgeBase` tRPC ep allows authenticated users to delete files from any knowledge base without verifying ownership. `userId` filter in the database query is commented out, so it's enabling attackers to delete other users' KB files if they know the knowledge base ID and file ID. While the vulnerability is confirmed, practical exploitation requires knowing target's KB ID and target's file ID. These IDs are random and not easily enumerable. However, IDs may leak through shared links, logs, referrer headers and so on. Missing authorization check is a critical security flaw regardless. Users should upgrade to version 2.0.0-next.193 to receive a patch.",
  "id": "CVE-2026-23522",
  "modified": "2026-01-20T21:35:39.441Z",
  "published": "2026-01-19T16:53:32.371Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/lobehub/lobe-chat/commit/2c1762b85acb84467ed5e799afe1499cd2f912e6"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/lobehub/lobe-chat/security/advisories/GHSA-j7xp-4mg9-x28r"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2026-23522"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:H/PR:N/UI:N/S:U/C:N/I:L/A:N",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Lobe Chat has IDOR in Knowledge Base File Removal that Allows Cross User File Deletion"
}
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "fixed": "4.25.8"
              },
              {
                "fixed": "5.29.5"
              },
              {
                "fixed": "6.31.1"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "fixed": "a4cbdd3ed0042e8f9b9c30e8b0634096d9532809"
            },
            {
              "fixed": "f5de0a0495faa63b4186fc767324f8b9a7bf4fc4"
            },
            {
              "fixed": "74211c0dfc2777318ab53c2cd2c317a2ef9012de"
            }
          ],
          "repo": "https://github.com/protocolbuffers/protobuf",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "Google",
    "cwe_ids": [
      "CWE-674"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Any project that uses Protobuf Pure-Python backend to parse untrusted Protocol Buffers data containing an arbitrary number of recursive groups, recursive messages or a series of SGROUP tags can be corrupted by exceeding the Python recursion limit. This can result in a Denial of service by crashing the application with a RecursionError. We recommend upgrading to version =\u003e6.31.1 or beyond commit 17838beda2943d08b8a9d4df5b68f5f04f26d901",
  "id": "CVE-2025-4565",
  "modified": "2025-06-16T15:39:18.263Z",
  "published": "2025-06-16T14:50:40.906Z",
  "references": [
    {
      "type": "WEB",
      "url": "https://github.com/protocolbuffers/protobuf/"
    },
    {
      "type": "FIX",
      "url": "https://github.com/protocolbuffers/protobuf/commit/17838beda2943d08b8a9d4df5b68f5f04f26d901"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2025-4565"
    },
    {
      "type": "PACKAGE",
      "url": "https://pypi.org/project/protobuf/"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:4.0/AV:N/AC:L/AT:P/PR:N/UI:N/VC:N/VI:N/VA:H/SC:N/SI:N/SA:N",
      "type": "CVSS_V4"
    }
  ],
  "summary": "Unbounded recursion in Python Protobuf"
}
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "last_affected": "1.25.3"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "last_affected": "9a7cfd8620989d9de6dc4ca0c95d9fd42c1768ed"
            }
          ],
          "repo": "https://github.com/go-gitea/gitea",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-vfmv-f93v-37mw"
  ],
  "database_specific": {
    "cna_assigner": "Gitea",
    "cwe_ids": [
      "CWE-284",
      "CWE-639"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Gitea does not properly validate repository ownership when linking attachments to releases. An attachment uploaded to a private repository could potentially be linked to a release in a different public repository, making it accessible to unauthorized users.",
  "id": "CVE-2026-20912",
  "modified": "2026-01-23T21:53:41.649Z",
  "published": "2026-01-22T22:01:52.026Z",
  "references": [
    {
      "type": "ADVISORY",
      "url": "https://blog.gitea.com/release-of-1.25.4/"
    },
    {
      "type": "FIX",
      "url": "https://github.com/go-gitea/gitea/pull/36320"
    },
    {
      "type": "FIX",
      "url": "https://github.com/go-gitea/gitea/pull/36355"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/go-gitea/gitea/releases/tag/v1.25.4"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/go-gitea/gitea/security/advisories/GHSA-vfmv-f93v-37mw"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2026-20912"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:N",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Gitea: Cross-Repository Authorization Bypass via Release Attachment Linking Leads to Private Attachment Disclosure"
}
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "last_affected": "4.x"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "last_affected": "85c43e41805cde051a7a29aefcac2cd6aee8c69d"
            }
          ],
          "repo": "https://github.com/forcedotcom/salesforcemobilesdk-windows",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "VulDB",
    "cwe_ids": [
      "CWE-89"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "** UNSUPPORTED WHEN ASSIGNED ** A vulnerability was found in forcedotcom SalesforceMobileSDK-Windows up to 4.x. It has been rated as critical. This issue affects the function ComputeCountSql of the file SalesforceSDK/SmartStore/Store/QuerySpec.cs. The manipulation leads to sql injection. Upgrading to version 5.0.0 is able to address this issue. The patch is named 83b3e91e0c1e84873a6d3ca3c5887eb5b4f5a3d8. It is recommended to upgrade the affected component. The associated identifier of this vulnerability is VDB-217619. NOTE: This vulnerability only affects products that are no longer supported by the maintainer.",
  "id": "CVE-2016-15012",
  "modified": "2025-04-08T20:30:50.208Z",
  "published": "2023-01-07T12:59:27.772Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/forcedotcom/SalesforceMobileSDK-Windows/commit/83b3e91e0c1e84873a6d3ca3c5887eb5b4f5a3d8"
    },
    {
      "type": "FIX",
      "url": "https://github.com/forcedotcom/SalesforceMobileSDK-Windows/releases/tag/v5.0.0"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2016-15012"
    },
    {
      "type": "REPORT",
      "url": "https://vuldb.com/?ctiid.217619"
    },
    {
      "type": "ADVISORY",
      "url": "https://vuldb.com/?id.217619"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:A/AC:L/PR:L/UI:N/S:U/C:L/I:L/A:L",
      "type": "CVSS_V3"
    }
  ],
  "summary": "forcedotcom SalesforceMobileSDK-Windows QuerySpec.cs ComputeCountSql sql injection"
}
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "last_affected": "8.9.0"
              },
              {
                "last_affected": "8.8.0"
              },
              {
                "last_affected": "8.7.1"
              },
              {
                "last_affected": "8.7.0"
              },
              {
                "last_affected": "8.6.0"
              },
              {
                "last_affected": "8.5.0"
              },
              {
                "last_affected": "8.4.0"
              },
              {
                "last_affected": "8.3.0"
              },
              {
                "last_affected": "8.2.1"
              },
              {
                "last_affected": "8.2.0"
              },
              {
                "last_affected": "8.1.2"
              },
              {
                "last_affected": "8.1.1"
              },
              {
                "last_affected": "8.1.0"
              },
              {
                "last_affected": "8.0.1"
              },
              {
                "last_affected": "8.0.0"
              },
              {
                "last_affected": "7.88.1"
              },
              {
                "last_affected": "7.88.0"
              },
              {
                "last_affected": "7.87.0"
              },
              {
                "last_affected": "7.86.0"
              },
              {
                "last_affected": "7.85.0"
              },
              {
                "last_affected": "7.84.0"
              },
              {
                "last_affected": "7.83.1"
              },
              {
                "last_affected": "7.83.0"
              },
              {
                "last_affected": "7.82.0"
              },
              {
                "last_affected": "7.81.0"
              },
              {
                "last_affected": "7.80.0"
              },
              {
                "last_affected": "7.79.1"
              },
              {
                "last_affected": "7.79.0"
              },
              {
                "last_affected": "7.78.0"
              },
              {
                "last_affected": "7.77.0"
              },
              {
                "last_affected": "7.76.1"
              },
              {
                "last_affected": "7.76.0"
              },
              {
                "last_affected": "7.75.0"
              },
              {
                "last_affected": "7.74.0"
              },
              {
                "last_affected": "7.73.0"
              },
              {
                "last_affected": "7.72.0"
              },
              {
                "last_affected": "7.71.1"
              },
              {
                "last_affected": "7.71.0"
              },
              {
                "last_affected": "7.70.0"
              },
              {
                "last_affected": "7.69.1"
              },
              {
                "last_affected": "7.69.0"
              },
              {
                "last_affected": "7.68.0"
              },
              {
                "last_affected": "7.67.0"
              },
              {
                "last_affected": "7.66.0"
              },
              {
                "last_affected": "7.65.3"
              },
              {
                "last_affected": "7.65.2"
              },
              {
                "last_affected": "7.65.1"
              },
              {
                "last_affected": "7.65.0"
              },
              {
                "last_affected": "7.64.1"
              },
              {
                "last_affected": "7.64.0"
              },
              {
                "last_affected": "7.63.0"
              },
              {
                "last_affected": "7.62.0"
              },
              {
                "last_affected": "7.61.1"
              },
              {
                "last_affected": "7.61.0"
              },
              {
                "last_affected": "7.60.0"
              },
              {
                "last_affected": "7.59.0"
              },
              {
                "last_affected": "7.58.0"
              },
              {
                "last_affected": "7.57.0"
              },
              {
                "last_affected": "7.56.1"
              },
              {
                "last_affected": "7.56.0"
              },
              {
                "last_affected": "7.55.1"
              },
              {
                "last_affected": "7.55.0"
              },
              {
                "last_affected": "7.54.1"
              },
              {
                "last_affected": "7.54.0"
              },
              {
                "last_affected": "7.53.1"
              },
              {
                "last_affected": "7.53.0"
              },
              {
                "last_affected": "7.52.1"
              },
              {
                "last_affected": "7.52.0"
              },
              {
                "last_affected": "7.51.0"
              },
              {
                "last_affected": "7.50.3"
              },
              {
                "last_affected": "7.50.2"
              },
              {
                "last_affected": "7.50.1"
              },
              {
                "last_affected": "7.50.0"
              },
              {
                "last_affected": "7.49.1"
              },
              {
                "last_affected": "7.49.0"
              },
              {
                "last_affected": "7.48.0"
              },
              {
                "last_affected": "7.47.1"
              },
              {
                "last_affected": "7.47.0"
              },
              {
                "last_affected": "7.46.0"
              },
              {
                "last_affected": "7.45.0"
              },
              {
                "last_affected": "7.44.0"
              },
              {
                "last_affected": "7.43.0"
              },
              {
                "last_affected": "7.42.1"
              },
              {
                "last_affected": "7.42.0"
              },
              {
                "last_affected": "7.41.0"
              },
              {
                "last_affected": "7.40.0"
              },
              {
                "last_affected": "7.39.0"
              },
              {
                "last_affected": "7.38.0"
              },
              {
                "last_affected": "7.37.1"
              },
              {
                "last_affected": "7.37.0"
              },
              {
                "last_affected": "7.36.0"
              },
              {
                "last_affected": "7.35.0"
              },
              {
                "last_affected": "7.34.0"
              },
              {
                "last_affected": "7.33.0"
              },
              {
                "last_affected": "7.32.0"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "last_affected": "5040f7e94cd01decbe7ba8fdacbf489182d503dc"
            },
            {
              "last_affected": "fd567d4f06857f4fc8e2f64ea727b1318f76ad33"
            },
            {
              "last_affected": "de7b3e89218467159a7af72d58cea8425946e97d"
            },
            {
              "last_affected": "72cf468d459d29e5366e416c014faaaf281dfa2d"
            },
            {
              "last_affected": "5ce164e0e9290c96eb7d502173426c0a135ec008"
            },
            {
              "last_affected": "7161cb17c01dcff1dc5bf89a18437d9d729f1ecd"
            },
            {
              "last_affected": "172e54cda18412da73fd8eb4e444e8a5b371ca59"
            },
            {
              "last_affected": "6fa1d817e5b1a00d7d0c8168091877476b499317"
            },
            {
              "last_affected": "50490c0679fcd0e50bb3a8fbf2d9244845652cf0"
            },
            {
              "last_affected": "98044e81705dc24a56daaf3544f30c13f0fc3a31"
            },
            {
              "last_affected": "7ab9d43720bc34d9aa351c7ca683c1668ebf8335"
            },
            {
              "last_affected": "1561d0675208854b39066877b140780a965702fa"
            },
            {
              "last_affected": "a9f8fe28481fef7c28d85b4a12a3a35521408eaf"
            },
            {
              "last_affected": "b16d1fa8ee567b52c09a0f89940b07d8491b881d"
            },
            {
              "last_affected": "47ccaa4218c408e70671a2fa9caaa3caf8c1a877"
            },
            {
              "last_affected": "046209e561b7e9b5aab1aef7daebf29ee6e6e8c7"
            },
            {
              "last_affected": "3027611ca6d4cc5510d2d0fccc3e5a074e09a2fb"
            },
            {
              "last_affected": "c12fb3ddaf48e709a7a4deaa55ec485e4df163ee"
            },
            {
              "last_affected": "cd95ee9f771361acf241629d2fe5507e308082a2"
            },
            {
              "last_affected": "93d092867f0f2c78571983040ef75e078ee1a4c4"
            },
            {
              "last_affected": "45ac4d019475df03562fe0ac54eb67e1d1de0ca7"
            },
            {
              "last_affected": "462196e6b4a47f924293a0e26b8e9c23d37ac26f"
            },
            {
              "last_affected": "1669b17d3a1a1fd824308544ca0ec02a2a4f50ea"
            },
            {
              "last_affected": "64db5c575d9c5536bd273a890f50777ad1ca7c13"
            },
            {
              "last_affected": "801bd5138ce31aa0d906fa4e2eabfc599d74e793"
            },
            {
              "last_affected": "9e560d11aad028de74addc0d1edfefa5667884f4"
            },
            {
              "last_affected": "c7aef0a945f9b6fb6d3f91716a21dfe2f4ea635f"
            },
            {
              "last_affected": "8e82f2a04a238c54ba91e553e9a8452e6d405965"
            },
            {
              "last_affected": "bfbde883af33397943df68a3ae01847a634d33bf"
            },
            {
              "last_affected": "6b951a6928811507d493303b2878e848c077b471"
            },
            {
              "last_affected": "566b74a0e19b9aa610f4931e5bfd339bcf8e9147"
            },
            {
              "last_affected": "3266b35bbe21c68dea0dc7ccd991eb028e6d360c"
            },
            {
              "last_affected": "2f33be817cbce6ad7a36f27dd7ada9219f13584c"
            },
            {
              "last_affected": "e052859759b34d0e05ce0f17244873e5cd7b457b"
            },
            {
              "last_affected": "315ee3fe75dade912b48a21ceec9ccda0230d937"
            },
            {
              "last_affected": "0c9211798fc80d5c9cc9bcdc8e11eb485c9c1c5b"
            },
            {
              "last_affected": "5a1fc8d33808d7b22f57bdf9403cda7ff07b0670"
            },
            {
              "last_affected": "e9db32a09af03f27e86d1251a9e68e9b7486d371"
            },
            {
              "last_affected": "53cdc2c963e33bc0cc1a51ad2df79396202e07f8"
            },
            {
              "last_affected": "b81e0b07784dc4c1e8d0a86194b9d28776d071c0"
            },
            {
              "last_affected": "b8d1366852fd0034374c5de1e4968c7a224f77cc"
            },
            {
              "last_affected": "2cfac302fbeec68f1727cba3d1705e16f02220ad"
            },
            {
              "last_affected": "2e9b725f67d49a9d7a1f053fe52dd4920c9ab1ad"
            },
            {
              "last_affected": "9cd755e1d768bbf228e7c9faf223b7459f7e0105"
            },
            {
              "last_affected": "aa73eb47bc8583070734696b25b34ad54c2c1f5e"
            },
            {
              "last_affected": "72c2cac8f0ac3a89c21d00b6c6e36fe6c6a8e62b"
            },
            {
              "last_affected": "69248b58f649e35b09a126c12781353e3471f5c6"
            },
            {
              "last_affected": "885ce31401b6789c959131754b1e5ae518964072"
            },
            {
              "last_affected": "521bbbe29928f9bc1c61306df612e856d45cbe5a"
            },
            {
              "last_affected": "f3294d9d86e6a7915a967efff2842089b8b0d071"
            },
            {
              "last_affected": "4258dc02d86e7e4de9f795a1af3a0bc6732d4ab5"
            },
            {
              "last_affected": "196677150f711a96c38ed123e621f1d4e995b2e5"
            },
            {
              "last_affected": "432eb5f5c254ee8383b2522ce597c9219877923e"
            },
            {
              "last_affected": "eb8138405a3f747f2c236464932f72e918946f68"
            },
            {
              "last_affected": "cb013830383f1ccc9757aba36bc32df5ec281c02"
            },
            {
              "last_affected": "4d6bd91ab33328c6d27eddc32e064defc02dc4fd"
            },
            {
              "last_affected": "d6c21c8eec597a925d2b647cff3d58ac69de01a0"
            },
            {
              "last_affected": "62c07b5743490ce373910f469abc8cdc759bec2b"
            },
            {
              "last_affected": "c514af5a4f5ac3ce724065cc6a8e009373436f78"
            },
            {
              "last_affected": "3ea76790571c1f7cf1bed34fabffd3cc20ad3dd3"
            },
            {
              "last_affected": "8839c05fba1f8415eec17eff8ac60cc3a50eb51e"
            },
            {
              "last_affected": "2679562dc7685674998f2841811d361400ae0d19"
            },
            {
              "last_affected": "54b636f14546d3fde9f9c67c3b32701d78563161"
            },
            {
              "last_affected": "d957e2189fdc73cef0ff3d1fb58043d354754449"
            },
            {
              "last_affected": "25df50aa3392ecdbf2b8256b93b30558e8b3a810"
            },
            {
              "last_affected": "a7135ac3c3d825ec9f4919ee0212434e01e76b4c"
            },
            {
              "last_affected": "44b9b4d4f56d6f6de92c89636994c03984e9cd01"
            },
            {
              "last_affected": "95c717bbd9c327c38b4efcc37d5cda29b8ee2a36"
            },
            {
              "last_affected": "3c561c657c2f0e553b19115a506592a8bbd744bc"
            },
            {
              "last_affected": "8986c86e1ef297e95518ae4695339f2d64d913cf"
            },
            {
              "last_affected": "9ce6d0d52821c6e33506cb173f0e27c68014e60e"
            },
            {
              "last_affected": "f2cb3a01192d36395d16acec6cdb93446ca6fd45"
            },
            {
              "last_affected": "79e63a53bb9598af863b0afe49ad662795faeef4"
            },
            {
              "last_affected": "cf93a7b364a70b56150cf6ea77492b799ec02a45"
            },
            {
              "last_affected": "67fe54d918a3b42a24cb7f5db81514c10e239735"
            },
            {
              "last_affected": "9819cec61b00cc872136ea5faf469627b3b87e69"
            },
            {
              "last_affected": "8f995e2e0022292374fc99a2277069b08ad98b5c"
            },
            {
              "last_affected": "06bf874bbca0a5c600b210b5db920eff9f95f0d0"
            },
            {
              "last_affected": "e2ae32ff5f3ab6f0819590f61f248f17df12987f"
            },
            {
              "last_affected": "2c000d91f3c423cee0af44e8afc79b9d25a9e714"
            },
            {
              "last_affected": "1a7f66a3de2625d10f65415e6eb3e56067dc0555"
            },
            {
              "last_affected": "38e07886ed2792988217a2ffa482ce3a69ca92c2"
            },
            {
              "last_affected": "4feb6e6d035d5d66984957c8ca22bc9a05df527f"
            },
            {
              "last_affected": "22691f849ac959ffaa821a3ca7f746ee54bd5e52"
            },
            {
              "last_affected": "ff837422ee4ec7d6aea7750a40e30cba29db93e8"
            },
            {
              "last_affected": "9ce2d7001939b795b45a8ce7700d1a3dcde0475d"
            },
            {
              "last_affected": "303bfc1024d948a5ba134ccfc106f82c0b4fd675"
            },
            {
              "last_affected": "202aa9f7758636730299b86715d924f54468a908"
            },
            {
              "last_affected": "df5169fa35f31ebe10893f2a3416ec8e8d8faa20"
            },
            {
              "last_affected": "3fed9acaef45ac8b99ceecc38afbed3494e2d3ef"
            },
            {
              "last_affected": "4f041c9d6e61829310eb0715d8edb2a232478123"
            },
            {
              "last_affected": "2bf90d071016e279796e789f0ac223d635671a41"
            },
            {
              "last_affected": "0966b324d911423c81351fb12e9219f71cd63be8"
            },
            {
              "last_affected": "f77e89c5d20db09eaebf378ec036a7e796932810"
            },
            {
              "last_affected": "70812c2f32fc5734bcbbe572b9f61c380433ad6a"
            }
          ],
          "repo": "https://github.com/curl/curl",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "curl",
    "osv_generated_from": "unknown"
  },
  "details": "libcurl's ASN1 parser code has the `GTime2str()` function, used for parsing an\nASN.1 Generalized Time field. If given an syntactically incorrect field, the\nparser might end up using -1 for the length of the *time fraction*, leading to\na `strlen()` getting performed on a pointer to a heap buffer area that is not\n(purposely) null terminated.\n\nThis flaw most likely leads to a crash, but can also lead to heap contents\ngetting returned to the application when\n[CURLINFO_CERTINFO](https://curl.se/libcurl/c/CURLINFO_CERTINFO.html) is used.",
  "id": "CVE-2024-7264",
  "modified": "2025-11-03T22:32:51.400Z",
  "published": "2024-07-31T08:08:14.585Z",
  "references": [
    {
      "type": "WEB",
      "url": "http://www.openwall.com/lists/oss-security/2024/07/31/1"
    },
    {
      "type": "WEB",
      "url": "https://curl.se/docs/CVE-2024-7264.html"
    },
    {
      "type": "WEB",
      "url": "https://curl.se/docs/CVE-2024-7264.json"
    },
    {
      "type": "FIX",
      "url": "https://github.com/curl/curl/commit/27959ecce75cdb2809c0bdb3286e60e08fadb519"
    },
    {
      "type": "WEB",
      "url": "https://hackerone.com/reports/2629968"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2024-7264"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.netapp.com/advisory/ntap-20240828-0008/"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.netapp.com/advisory/ntap-20241025-0006/"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.netapp.com/advisory/ntap-20241025-0010/"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:L/UI:N/S:U/C:L/I:L/A:L",
      "type": "CVSS_V3"
    }
  ],
  "summary": "ASN.1 date parser overread"
}
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "1.7.0"
              },
              {
                "fixed": "1.18.4"
              },
              {
                "introduced": "1.19.0"
              },
              {
                "fixed": "1.20.3"
              },
              {
                "introduced": "1.21.0"
              },
              {
                "fixed": "1.23.1"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "f64673580dfc649954eb744eb2734f2f118baa47"
            },
            {
              "fixed": "9241c3eddf4a6a218681b088d71f7191513e2376"
            },
            {
              "introduced": "674d77d4ef42bd99238521546b3b2cd60b26e50d"
            },
            {
              "fixed": "ba81945ffc2695b71f2bbcadbfb5e46ec55aaef3"
            },
            {
              "introduced": "50795e652ecb0747c8d048aeaa38a41dddb2da4b"
            },
            {
              "fixed": "1a997ffbd62334af2553775234e75ede2d7d949f"
            }
          ],
          "repo": "https://github.com/tokio-rs/tokio",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-7rrj-xr53-82p7"
  ],
  "database_specific": {
    "cna_assigner": "GitHub_M",
    "cwe_ids": [
      "CWE-665"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Tokio is a runtime for writing applications with Rust. Starting with version 1.7.0 and prior to versions 1.18.4, 1.20.3, and 1.23.1, when configuring a Windows named pipe server, setting `pipe_mode` will reset `reject_remote_clients` to `false`. If the application has previously configured `reject_remote_clients` to `true`, this effectively undoes the configuration. Remote clients may only access the named pipe if the named pipe's associated path is accessible via a publicly shared folder (SMB). Versions 1.23.1, 1.20.3, and 1.18.4 have been patched. The fix will also be present in all releases starting from version 1.24.0. Named pipes were introduced to Tokio in version 1.7.0, so releases older than 1.7.0 are not affected. As a workaround, ensure that `pipe_mode` is set first after initializing a `ServerOptions`.",
  "id": "CVE-2023-22466",
  "modified": "2025-03-10T21:32:32.950Z",
  "published": "2023-01-04T21:47:09.400Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/tokio-rs/tokio/pull/5336"
    },
    {
      "type": "WEB",
      "url": "https://github.com/tokio-rs/tokio/releases/tag/tokio-1.23.1"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/tokio-rs/tokio/security/advisories/GHSA-7rrj-xr53-82p7"
    },
    {
      "type": "WEB",
      "url": "https://learn.microsoft.com/en-us/windows/win32/api/winbase/nf-winbase-createnamedpipea#pipe_reject_remote_clients"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2023-22466"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:L/UI:N/S:U/C:L/I:N/A:L",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Tokio's reject_remote_clients configuration may get dropped when creating a Windows named pipe"
}
{
  "database_specific": {
    "cna_assigner": "mitre",
    "osv_generated_from": "unknown"
  },
  "details": "An integer overflow in the component hb-ot-shape-fallback.cc of Harfbuzz v4.3.0 allows attackers to cause a Denial of Service (DoS) via unspecified vectors.",
  "id": "CVE-2022-33068",
  "modified": "2024-08-03T08:01:19.054Z",
  "published": "2022-06-22T13:24:42Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/harfbuzz/harfbuzz/commit/62e803b36173fd096d7ad460dd1d1db9be542593"
    },
    {
      "type": "REPORT",
      "url": "https://github.com/harfbuzz/harfbuzz/issues/3557"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/FQBJ24W6TXLSAQWCFW7IBGUMX4AJI3S4/"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/QQMEXOVDL3T2UXKBCON7JSOCE646G7HG/"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/W56WTC5IY4EIUHVUIHMCXA3BSBZLSZCI/"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-33068"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/202209-11"
    }
  ],
  "schema_version": "1.7.5"
}
{
  "database_specific": {
    "cna_assigner": "mitre",
    "osv_generated_from": "unknown"
  },
  "details": "FFmpeg 2.x allows remote attackers to conduct cross-origin attacks and read arbitrary files by using the concat protocol in an HTTP Live Streaming (HLS) M3U8 file, leading to an external HTTP request in which the URL string contains the first line of a local file.",
  "id": "CVE-2016-1897",
  "modified": "2024-08-05T23:10:39.912Z",
  "published": "2016-01-15T02:00:00Z",
  "references": [
    {
      "type": "ARTICLE",
      "url": "http://habrahabr.ru/company/mailru/blog/274855"
    },
    {
      "type": "ADVISORY",
      "url": "http://lists.opensuse.org/opensuse-security-announce/2016-01/msg00034.html"
    },
    {
      "type": "WEB",
      "url": "http://security.stackexchange.com/questions/110644"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.debian.org/security/2016/dsa-3506"
    },
    {
      "type": "ARTICLE",
      "url": "http://www.openwall.com/lists/oss-security/2016/01/14/1"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.securityfocus.com/bid/80501"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.securitytracker.com/id/1034932"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.slackware.com/security/viewer.php?l=slackware-security\u0026y=2016\u0026m=slackware-security.529036"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.ubuntu.com/usn/USN-2944-1"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2016-1897"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/201606-09"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/201705-08"
    },
    {
      "type": "ADVISORY",
      "url": "https://www.kb.cert.org/vuls/id/772447"
    }
  ],
  "schema_version": "1.7.5"
}
{
  "database_specific": {
    "cna_assigner": "redhat",
    "cwe_ids": [
      "CWE-122",
      "CWE-131"
    ],
    "osv_generated_from": "unknown",
    "unresolved_ranges": [
      {
        "extracted_events": [
          {
            "last_affected": "7.61.1"
          }
        ],
        "source": "AFFECTED_FIELD"
      },
      {
        "extracted_events": [
          {
            "fixed": "7.61.1"
          }
        ],
        "source": "DESCRIPTION"
      }
    ]
  },
  "details": "curl before version 7.61.1 is vulnerable to a buffer overrun in the NTLM authentication code. The internal function Curl_ntlm_core_mk_nt_hash multiplies the length of the password by two (SUM) to figure out how large temporary storage area to allocate from the heap. The length value is then subsequently used to iterate over the password and generate output into the allocated storage buffer. On systems with a 32 bit size_t, the math to calculate SUM triggers an integer overflow when the password length exceeds 2GB (2^31 bytes). This integer overflow usually causes a very small buffer to actually get allocated instead of the intended very huge one, making the use of that buffer end up in a heap buffer overflow. (This bug is almost identical to CVE-2017-8816.)",
  "id": "CVE-2018-14618",
  "modified": "2024-08-05T09:29:51.906Z",
  "published": "2018-09-05T19:00:00Z",
  "references": [
    {
      "type": "ADVISORY",
      "url": "http://www.securitytracker.com/id/1041605"
    },
    {
      "type": "ADVISORY",
      "url": "https://access.redhat.com/errata/RHSA-2018:3558"
    },
    {
      "type": "ADVISORY",
      "url": "https://access.redhat.com/errata/RHSA-2019:1880"
    },
    {
      "type": "REPORT",
      "url": "https://bugzilla.redhat.com/show_bug.cgi?id=CVE-2018-14618"
    },
    {
      "type": "WEB",
      "url": "https://cert-portal.siemens.com/productcert/pdf/ssa-436177.pdf"
    },
    {
      "type": "WEB",
      "url": "https://curl.haxx.se/docs/CVE-2018-14618.html"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2018-14618"
    },
    {
      "type": "WEB",
      "url": "https://psirt.global.sonicwall.com/vuln-detail/SNWLID-2018-0014"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/201903-03"
    },
    {
      "type": "ADVISORY",
      "url": "https://usn.ubuntu.com/3765-1/"
    },
    {
      "type": "ADVISORY",
      "url": "https://usn.ubuntu.com/3765-2/"
    },
    {
      "type": "ADVISORY",
      "url": "https://www.debian.org/security/2018/dsa-4286"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.0/AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H",
      "type": "CVSS_V3"
    }
  ]
}
{
  "database_specific": {
    "cna_assigner": "redhat",
    "cwe_ids": [
      "CWE-200"
    ],
    "osv_generated_from": "unknown",
    "unresolved_ranges": [
      {
        "extracted_events": [
          {
            "last_affected": "11 and 12"
          }
        ],
        "source": "AFFECTED_FIELD"
      }
    ]
  },
  "details": "A flaw was found in RHDS 11 and RHDS 12. While browsing entries LDAP tries to decode the userPassword attribute instead of the userCertificate attribute which could lead into sensitive information leaked. An attacker with a local account where the cockpit-389-ds is running can list the processes and display the hashed passwords. The highest threat from this vulnerability is to data confidentiality.",
  "id": "CVE-2023-1055",
  "modified": "2025-03-11T14:02:59.854Z",
  "published": "2023-02-27T00:00:00Z",
  "references": [
    {
      "type": "REPORT",
      "url": "https://bugzilla.redhat.com/show_bug.cgi?id=2173517#c0"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/MZOYQ5TCV6ZEPMDV4CSLK3KINAAO4SRI/"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2023-1055"
    }
  ],
  "schema_version": "1.7.5"
}
{
  "database_specific": {
    "cna_assigner": "redhat",
    "cwe_ids": [
      "CWE-415"
    ],
    "osv_generated_from": "unknown",
    "unresolved_ranges": [
      {
        "extracted_events": [
          {
            "last_affected": "0.1.0"
          }
        ],
        "source": "AFFECTED_FIELD"
      }
    ]
  },
  "details": "A double-free vulnerability was found in libdwarf. In a multiply-corrupted DWARF object, libdwarf may try to dealloc(free) an allocation twice, potentially causing unpredictable and various results.",
  "id": "CVE-2024-2002",
  "modified": "2025-11-20T18:21:28.745Z",
  "published": "2024-03-18T12:26:31.386Z",
  "references": [
    {
      "type": "WEB",
      "url": "https://access.redhat.com/downloads/content/package-browser/"
    },
    {
      "type": "ADVISORY",
      "url": "https://access.redhat.com/security/cve/CVE-2024-2002"
    },
    {
      "type": "REPORT",
      "url": "https://bugzilla.redhat.com/show_bug.cgi?id=2267700"
    },
    {
      "type": "WEB",
      "url": "https://github.com/davea42/libdwarf-code/"
    },
    {
      "type": "WEB",
      "url": "https://github.com/davea42/libdwarf-code/blob/main/bugxml/data.txt"
    },
    {
      "type": "WEB",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/ZGPVLSPIXR32J6FOAFTTIMYTUUXJICGW/"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2024-2002"
    }
  ],
  "schema_version": "1.7.5",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Libdwarf: crashes randomly on fuzzed object"
}
---

[TestCVE5Snapshot/CVE-2016-1897.json - 1]
{
  "affected": [
    {}
  ],
  "database_specific": {
    "cna_assigner": "mitre",
    "osv_generated_from": "unknown"
  },
  "details": "FFmpeg 2.x allows remote attackers to conduct cross-origin attacks and read arbitrary files by using the concat protocol in an HTTP Live Streaming (HLS) M3U8 file, leading to an external HTTP request in which the URL string contains the first line of a local file.",
  "id": "CVE-2016-1897",
  "modified": "2024-08-05T23:10:39.912Z",
  "published": "2016-01-15T02:00:00Z",
  "references": [
    {
      "type": "ARTICLE",
      "url": "http://habrahabr.ru/company/mailru/blog/274855"
    },
    {
      "type": "ADVISORY",
      "url": "http://lists.opensuse.org/opensuse-security-announce/2016-01/msg00034.html"
    },
    {
      "type": "WEB",
      "url": "http://security.stackexchange.com/questions/110644"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.debian.org/security/2016/dsa-3506"
    },
    {
      "type": "ARTICLE",
      "url": "http://www.openwall.com/lists/oss-security/2016/01/14/1"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.securityfocus.com/bid/80501"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.securitytracker.com/id/1034932"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.slackware.com/security/viewer.php?l=slackware-security\u0026y=2016\u0026m=slackware-security.529036"
    },
    {
      "type": "ADVISORY",
      "url": "http://www.ubuntu.com/usn/USN-2944-1"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2016-1897"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/201606-09"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/201705-08"
    },
    {
      "type": "ADVISORY",
      "url": "https://www.kb.cert.org/vuls/id/772447"
    }
  ],
  "schema_version": "1.7.3"
}
---

[TestCVE5Snapshot/CVE-2022-33068.json - 1]
{
  "affected": [
    {}
  ],
  "database_specific": {
    "cna_assigner": "mitre",
    "osv_generated_from": "unknown"
  },
  "details": "An integer overflow in the component hb-ot-shape-fallback.cc of Harfbuzz v4.3.0 allows attackers to cause a Denial of Service (DoS) via unspecified vectors.",
  "id": "CVE-2022-33068",
  "modified": "2024-08-03T08:01:19.054Z",
  "published": "2022-06-22T13:24:42Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/harfbuzz/harfbuzz/commit/62e803b36173fd096d7ad460dd1d1db9be542593"
    },
    {
      "type": "REPORT",
      "url": "https://github.com/harfbuzz/harfbuzz/issues/3557"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/FQBJ24W6TXLSAQWCFW7IBGUMX4AJI3S4/"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/QQMEXOVDL3T2UXKBCON7JSOCE646G7HG/"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/W56WTC5IY4EIUHVUIHMCXA3BSBZLSZCI/"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-33068"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/202209-11"
    }
  ],
  "schema_version": "1.7.3"
}
---

[TestCVE5Snapshot/CVE-2023-1055.json - 1]
{
  "affected": [
    {}
  ],
  "database_specific": {
    "cna_assigner": "redhat",
    "cwe_ids": [
      "CWE-200"
    ],
    "osv_generated_from": "unknown",
    "unresolved_ranges": [
      {
        "extracted_events": [
          {
            "last_affected": "11 and 12"
          }
        ],
        "source": "AFFECTED_FIELD"
      }
    ]
  },
  "details": "A flaw was found in RHDS 11 and RHDS 12. While browsing entries LDAP tries to decode the userPassword attribute instead of the userCertificate attribute which could lead into sensitive information leaked. An attacker with a local account where the cockpit-389-ds is running can list the processes and display the hashed passwords. The highest threat from this vulnerability is to data confidentiality.",
  "id": "CVE-2023-1055",
  "modified": "2025-03-11T14:02:59.854Z",
  "published": "2023-02-27T00:00:00Z",
  "references": [
    {
      "type": "REPORT",
      "url": "https://bugzilla.redhat.com/show_bug.cgi?id=2173517#c0"
    },
    {
      "type": "ADVISORY",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce%40lists.fedoraproject.org/message/MZOYQ5TCV6ZEPMDV4CSLK3KINAAO4SRI/"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2023-1055"
    }
  ],
  "schema_version": "1.7.3"
}
---

[TestCVE5Snapshot/CVE-2018-14618.json - 1]
{
  "affected": [
    {}
  ],
  "database_specific": {
    "cna_assigner": "redhat",
    "cwe_ids": [
      "CWE-122",
      "CWE-131"
    ],
    "osv_generated_from": "unknown",
    "unresolved_ranges": [
      {
        "extracted_events": [
          {
            "last_affected": "7.61.1"
          }
        ],
        "source": "AFFECTED_FIELD"
      },
      {
        "extracted_events": [
          {
            "fixed": "7.61.1"
          }
        ],
        "source": "DESCRIPTION"
      }
    ]
  },
  "details": "curl before version 7.61.1 is vulnerable to a buffer overrun in the NTLM authentication code. The internal function Curl_ntlm_core_mk_nt_hash multiplies the length of the password by two (SUM) to figure out how large temporary storage area to allocate from the heap. The length value is then subsequently used to iterate over the password and generate output into the allocated storage buffer. On systems with a 32 bit size_t, the math to calculate SUM triggers an integer overflow when the password length exceeds 2GB (2^31 bytes). This integer overflow usually causes a very small buffer to actually get allocated instead of the intended very huge one, making the use of that buffer end up in a heap buffer overflow. (This bug is almost identical to CVE-2017-8816.)",
  "id": "CVE-2018-14618",
  "modified": "2024-08-05T09:29:51.906Z",
  "published": "2018-09-05T19:00:00Z",
  "references": [
    {
      "type": "ADVISORY",
      "url": "http://www.securitytracker.com/id/1041605"
    },
    {
      "type": "ADVISORY",
      "url": "https://access.redhat.com/errata/RHSA-2018:3558"
    },
    {
      "type": "ADVISORY",
      "url": "https://access.redhat.com/errata/RHSA-2019:1880"
    },
    {
      "type": "REPORT",
      "url": "https://bugzilla.redhat.com/show_bug.cgi?id=CVE-2018-14618"
    },
    {
      "type": "WEB",
      "url": "https://cert-portal.siemens.com/productcert/pdf/ssa-436177.pdf"
    },
    {
      "type": "WEB",
      "url": "https://curl.haxx.se/docs/CVE-2018-14618.html"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2018-14618"
    },
    {
      "type": "WEB",
      "url": "https://psirt.global.sonicwall.com/vuln-detail/SNWLID-2018-0014"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.gentoo.org/glsa/201903-03"
    },
    {
      "type": "ADVISORY",
      "url": "https://usn.ubuntu.com/3765-1/"
    },
    {
      "type": "ADVISORY",
      "url": "https://usn.ubuntu.com/3765-2/"
    },
    {
      "type": "ADVISORY",
      "url": "https://www.debian.org/security/2018/dsa-4286"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.0/AV:N/AC:H/PR:N/UI:R/S:U/C:H/I:H/A:H",
      "type": "CVSS_V3"
    }
  ]
}
---

[TestCVE5Snapshot/CVE-2024-2002.json - 1]
{
  "affected": [
    {}
  ],
  "database_specific": {
    "cna_assigner": "redhat",
    "cwe_ids": [
      "CWE-415"
    ],
    "osv_generated_from": "unknown",
    "unresolved_ranges": [
      {
        "extracted_events": [
          {
            "last_affected": "0.1.0"
          }
        ],
        "source": "AFFECTED_FIELD"
      }
    ]
  },
  "details": "A double-free vulnerability was found in libdwarf. In a multiply-corrupted DWARF object, libdwarf may try to dealloc(free) an allocation twice, potentially causing unpredictable and various results.",
  "id": "CVE-2024-2002",
  "modified": "2025-11-20T18:21:28.745Z",
  "published": "2024-03-18T12:26:31.386Z",
  "references": [
    {
      "type": "WEB",
      "url": "https://access.redhat.com/downloads/content/package-browser/"
    },
    {
      "type": "ADVISORY",
      "url": "https://access.redhat.com/security/cve/CVE-2024-2002"
    },
    {
      "type": "REPORT",
      "url": "https://bugzilla.redhat.com/show_bug.cgi?id=2267700"
    },
    {
      "type": "WEB",
      "url": "https://github.com/davea42/libdwarf-code/"
    },
    {
      "type": "WEB",
      "url": "https://github.com/davea42/libdwarf-code/blob/main/bugxml/data.txt"
    },
    {
      "type": "WEB",
      "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/ZGPVLSPIXR32J6FOAFTTIMYTUUXJICGW/"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2024-2002"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Libdwarf: crashes randomly on fuzzed object"
}
---

[TestCVE5Snapshot/CVE-2016-15012.json - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "last_affected": "4.x"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "last_affected": "85c43e41805cde051a7a29aefcac2cd6aee8c69d"
            }
          ],
          "repo": "https://github.com/forcedotcom/salesforcemobilesdk-windows",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "VulDB",
    "cwe_ids": [
      "CWE-89"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "** UNSUPPORTED WHEN ASSIGNED ** A vulnerability was found in forcedotcom SalesforceMobileSDK-Windows up to 4.x. It has been rated as critical. This issue affects the function ComputeCountSql of the file SalesforceSDK/SmartStore/Store/QuerySpec.cs. The manipulation leads to sql injection. Upgrading to version 5.0.0 is able to address this issue. The patch is named 83b3e91e0c1e84873a6d3ca3c5887eb5b4f5a3d8. It is recommended to upgrade the affected component. The associated identifier of this vulnerability is VDB-217619. NOTE: This vulnerability only affects products that are no longer supported by the maintainer.",
  "id": "CVE-2016-15012",
  "modified": "2025-04-08T20:30:50.208Z",
  "published": "2023-01-07T12:59:27.772Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/forcedotcom/SalesforceMobileSDK-Windows/commit/83b3e91e0c1e84873a6d3ca3c5887eb5b4f5a3d8"
    },
    {
      "type": "FIX",
      "url": "https://github.com/forcedotcom/SalesforceMobileSDK-Windows/releases/tag/v5.0.0"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2016-15012"
    },
    {
      "type": "REPORT",
      "url": "https://vuldb.com/?ctiid.217619"
    },
    {
      "type": "ADVISORY",
      "url": "https://vuldb.com/?id.217619"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.1/AV:A/AC:L/PR:L/UI:N/S:U/C:L/I:L/A:L",
      "type": "CVSS_V3"
    }
  ],
  "summary": "forcedotcom SalesforceMobileSDK-Windows QuerySpec.cs ComputeCountSql sql injection"
}
---

[TestCVE5Snapshot/CVE-2023-22466.json - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "1.7.0"
              },
              {
                "fixed": "1.18.4"
              },
              {
                "introduced": "1.19.0"
              },
              {
                "fixed": "1.20.3"
              },
              {
                "introduced": "1.21.0"
              },
              {
                "fixed": "1.23.1"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "f64673580dfc649954eb744eb2734f2f118baa47"
            },
            {
              "fixed": "9241c3eddf4a6a218681b088d71f7191513e2376"
            },
            {
              "introduced": "674d77d4ef42bd99238521546b3b2cd60b26e50d"
            },
            {
              "fixed": "ba81945ffc2695b71f2bbcadbfb5e46ec55aaef3"
            },
            {
              "introduced": "50795e652ecb0747c8d048aeaa38a41dddb2da4b"
            },
            {
              "fixed": "1a997ffbd62334af2553775234e75ede2d7d949f"
            }
          ],
          "repo": "https://github.com/tokio-rs/tokio",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-7rrj-xr53-82p7"
  ],
  "database_specific": {
    "cna_assigner": "GitHub_M",
    "cwe_ids": [
      "CWE-665"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Tokio is a runtime for writing applications with Rust. Starting with version 1.7.0 and prior to versions 1.18.4, 1.20.3, and 1.23.1, when configuring a Windows named pipe server, setting `pipe_mode` will reset `reject_remote_clients` to `false`. If the application has previously configured `reject_remote_clients` to `true`, this effectively undoes the configuration. Remote clients may only access the named pipe if the named pipe's associated path is accessible via a publicly shared folder (SMB). Versions 1.23.1, 1.20.3, and 1.18.4 have been patched. The fix will also be present in all releases starting from version 1.24.0. Named pipes were introduced to Tokio in version 1.7.0, so releases older than 1.7.0 are not affected. As a workaround, ensure that `pipe_mode` is set first after initializing a `ServerOptions`.",
  "id": "CVE-2023-22466",
  "modified": "2025-03-10T21:32:32.950Z",
  "published": "2023-01-04T21:47:09.400Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/tokio-rs/tokio/pull/5336"
    },
    {
      "type": "WEB",
      "url": "https://github.com/tokio-rs/tokio/releases/tag/tokio-1.23.1"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/tokio-rs/tokio/security/advisories/GHSA-7rrj-xr53-82p7"
    },
    {
      "type": "WEB",
      "url": "https://learn.microsoft.com/en-us/windows/win32/api/winbase/nf-winbase-createnamedpipea#pipe_reject_remote_clients"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2023-22466"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:L/UI:N/S:U/C:L/I:N/A:L",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Tokio's reject_remote_clients configuration may get dropped when creating a Windows named pipe"
}
---

[TestCVE5Snapshot/CVE-2025-4565.json - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "fixed": "4.25.8"
              },
              {
                "fixed": "5.29.5"
              },
              {
                "fixed": "6.31.1"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "fixed": "a4cbdd3ed0042e8f9b9c30e8b0634096d9532809"
            },
            {
              "fixed": "f5de0a0495faa63b4186fc767324f8b9a7bf4fc4"
            },
            {
              "fixed": "74211c0dfc2777318ab53c2cd2c317a2ef9012de"
            }
          ],
          "repo": "https://github.com/protocolbuffers/protobuf",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "Google",
    "cwe_ids": [
      "CWE-674"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Any project that uses Protobuf Pure-Python backend to parse untrusted Protocol Buffers data containing an arbitrary number of recursive groups, recursive messages or a series of SGROUP tags can be corrupted by exceeding the Python recursion limit. This can result in a Denial of service by crashing the application with a RecursionError. We recommend upgrading to version =\u003e6.31.1 or beyond commit 17838beda2943d08b8a9d4df5b68f5f04f26d901",
  "id": "CVE-2025-4565",
  "modified": "2025-06-16T15:39:18.263Z",
  "published": "2025-06-16T14:50:40.906Z",
  "references": [
    {
      "type": "WEB",
      "url": "https://github.com/protocolbuffers/protobuf/"
    },
    {
      "type": "FIX",
      "url": "https://github.com/protocolbuffers/protobuf/commit/17838beda2943d08b8a9d4df5b68f5f04f26d901"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2025-4565"
    },
    {
      "type": "PACKAGE",
      "url": "https://pypi.org/project/protobuf/"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:4.0/AV:N/AC:L/AT:P/PR:N/UI:N/VC:N/VI:N/VA:H/SC:N/SI:N/SA:N",
      "type": "CVSS_V4"
    }
  ],
  "summary": "Unbounded recursion in Python Protobuf"
}
---

[TestCVE5Snapshot/CVE-2026-23522.json - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "fixed": "2.0.0-next.193"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "fixed": "eeda4f90af57368584fa97250cbb0d5bf0a5e16e"
            }
          ],
          "repo": "https://github.com/lobehub/lobehub",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-j7xp-4mg9-x28r"
  ],
  "database_specific": {
    "cna_assigner": "GitHub_M",
    "cwe_ids": [
      "CWE-284",
      "CWE-639",
      "CWE-862",
      "CWE-915"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "LobeChat is an open source chat application platform. Prior to version 2.0.0-next.193, `knowledgeBase.removeFilesFromKnowledgeBase` tRPC ep allows authenticated users to delete files from any knowledge base without verifying ownership. `userId` filter in the database query is commented out, so it's enabling attackers to delete other users' KB files if they know the knowledge base ID and file ID. While the vulnerability is confirmed, practical exploitation requires knowing target's KB ID and target's file ID. These IDs are random and not easily enumerable. However, IDs may leak through shared links, logs, referrer headers and so on. Missing authorization check is a critical security flaw regardless. Users should upgrade to version 2.0.0-next.193 to receive a patch.",
  "id": "CVE-2026-23522",
  "modified": "2026-01-20T21:35:39.441Z",
  "published": "2026-01-19T16:53:32.371Z",
  "references": [
    {
      "type": "FIX",
      "url": "https://github.com/lobehub/lobe-chat/commit/2c1762b85acb84467ed5e799afe1499cd2f912e6"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/lobehub/lobe-chat/security/advisories/GHSA-j7xp-4mg9-x28r"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2026-23522"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:H/PR:N/UI:N/S:U/C:N/I:L/A:N",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Lobe Chat has IDOR in Knowledge Base File Removal that Allows Cross User File Deletion"
}
---

[TestCVE5Snapshot/CVE-2024-7264.json - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "last_affected": "8.9.0"
              },
              {
                "last_affected": "8.8.0"
              },
              {
                "last_affected": "8.7.1"
              },
              {
                "last_affected": "8.7.0"
              },
              {
                "last_affected": "8.6.0"
              },
              {
                "last_affected": "8.5.0"
              },
              {
                "last_affected": "8.4.0"
              },
              {
                "last_affected": "8.3.0"
              },
              {
                "last_affected": "8.2.1"
              },
              {
                "last_affected": "8.2.0"
              },
              {
                "last_affected": "8.1.2"
              },
              {
                "last_affected": "8.1.1"
              },
              {
                "last_affected": "8.1.0"
              },
              {
                "last_affected": "8.0.1"
              },
              {
                "last_affected": "8.0.0"
              },
              {
                "last_affected": "7.88.1"
              },
              {
                "last_affected": "7.88.0"
              },
              {
                "last_affected": "7.87.0"
              },
              {
                "last_affected": "7.86.0"
              },
              {
                "last_affected": "7.85.0"
              },
              {
                "last_affected": "7.84.0"
              },
              {
                "last_affected": "7.83.1"
              },
              {
                "last_affected": "7.83.0"
              },
              {
                "last_affected": "7.82.0"
              },
              {
                "last_affected": "7.81.0"
              },
              {
                "last_affected": "7.80.0"
              },
              {
                "last_affected": "7.79.1"
              },
              {
                "last_affected": "7.79.0"
              },
              {
                "last_affected": "7.78.0"
              },
              {
                "last_affected": "7.77.0"
              },
              {
                "last_affected": "7.76.1"
              },
              {
                "last_affected": "7.76.0"
              },
              {
                "last_affected": "7.75.0"
              },
              {
                "last_affected": "7.74.0"
              },
              {
                "last_affected": "7.73.0"
              },
              {
                "last_affected": "7.72.0"
              },
              {
                "last_affected": "7.71.1"
              },
              {
                "last_affected": "7.71.0"
              },
              {
                "last_affected": "7.70.0"
              },
              {
                "last_affected": "7.69.1"
              },
              {
                "last_affected": "7.69.0"
              },
              {
                "last_affected": "7.68.0"
              },
              {
                "last_affected": "7.67.0"
              },
              {
                "last_affected": "7.66.0"
              },
              {
                "last_affected": "7.65.3"
              },
              {
                "last_affected": "7.65.2"
              },
              {
                "last_affected": "7.65.1"
              },
              {
                "last_affected": "7.65.0"
              },
              {
                "last_affected": "7.64.1"
              },
              {
                "last_affected": "7.64.0"
              },
              {
                "last_affected": "7.63.0"
              },
              {
                "last_affected": "7.62.0"
              },
              {
                "last_affected": "7.61.1"
              },
              {
                "last_affected": "7.61.0"
              },
              {
                "last_affected": "7.60.0"
              },
              {
                "last_affected": "7.59.0"
              },
              {
                "last_affected": "7.58.0"
              },
              {
                "last_affected": "7.57.0"
              },
              {
                "last_affected": "7.56.1"
              },
              {
                "last_affected": "7.56.0"
              },
              {
                "last_affected": "7.55.1"
              },
              {
                "last_affected": "7.55.0"
              },
              {
                "last_affected": "7.54.1"
              },
              {
                "last_affected": "7.54.0"
              },
              {
                "last_affected": "7.53.1"
              },
              {
                "last_affected": "7.53.0"
              },
              {
                "last_affected": "7.52.1"
              },
              {
                "last_affected": "7.52.0"
              },
              {
                "last_affected": "7.51.0"
              },
              {
                "last_affected": "7.50.3"
              },
              {
                "last_affected": "7.50.2"
              },
              {
                "last_affected": "7.50.1"
              },
              {
                "last_affected": "7.50.0"
              },
              {
                "last_affected": "7.49.1"
              },
              {
                "last_affected": "7.49.0"
              },
              {
                "last_affected": "7.48.0"
              },
              {
                "last_affected": "7.47.1"
              },
              {
                "last_affected": "7.47.0"
              },
              {
                "last_affected": "7.46.0"
              },
              {
                "last_affected": "7.45.0"
              },
              {
                "last_affected": "7.44.0"
              },
              {
                "last_affected": "7.43.0"
              },
              {
                "last_affected": "7.42.1"
              },
              {
                "last_affected": "7.42.0"
              },
              {
                "last_affected": "7.41.0"
              },
              {
                "last_affected": "7.40.0"
              },
              {
                "last_affected": "7.39.0"
              },
              {
                "last_affected": "7.38.0"
              },
              {
                "last_affected": "7.37.1"
              },
              {
                "last_affected": "7.37.0"
              },
              {
                "last_affected": "7.36.0"
              },
              {
                "last_affected": "7.35.0"
              },
              {
                "last_affected": "7.34.0"
              },
              {
                "last_affected": "7.33.0"
              },
              {
                "last_affected": "7.32.0"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "last_affected": "5040f7e94cd01decbe7ba8fdacbf489182d503dc"
            },
            {
              "last_affected": "fd567d4f06857f4fc8e2f64ea727b1318f76ad33"
            },
            {
              "last_affected": "de7b3e89218467159a7af72d58cea8425946e97d"
            },
            {
              "last_affected": "72cf468d459d29e5366e416c014faaaf281dfa2d"
            },
            {
              "last_affected": "5ce164e0e9290c96eb7d502173426c0a135ec008"
            },
            {
              "last_affected": "7161cb17c01dcff1dc5bf89a18437d9d729f1ecd"
            },
            {
              "last_affected": "172e54cda18412da73fd8eb4e444e8a5b371ca59"
            },
            {
              "last_affected": "6fa1d817e5b1a00d7d0c8168091877476b499317"
            },
            {
              "last_affected": "50490c0679fcd0e50bb3a8fbf2d9244845652cf0"
            },
            {
              "last_affected": "98044e81705dc24a56daaf3544f30c13f0fc3a31"
            },
            {
              "last_affected": "7ab9d43720bc34d9aa351c7ca683c1668ebf8335"
            },
            {
              "last_affected": "1561d0675208854b39066877b140780a965702fa"
            },
            {
              "last_affected": "a9f8fe28481fef7c28d85b4a12a3a35521408eaf"
            },
            {
              "last_affected": "b16d1fa8ee567b52c09a0f89940b07d8491b881d"
            },
            {
              "last_affected": "47ccaa4218c408e70671a2fa9caaa3caf8c1a877"
            },
            {
              "last_affected": "046209e561b7e9b5aab1aef7daebf29ee6e6e8c7"
            },
            {
              "last_affected": "3027611ca6d4cc5510d2d0fccc3e5a074e09a2fb"
            },
            {
              "last_affected": "c12fb3ddaf48e709a7a4deaa55ec485e4df163ee"
            },
            {
              "last_affected": "cd95ee9f771361acf241629d2fe5507e308082a2"
            },
            {
              "last_affected": "93d092867f0f2c78571983040ef75e078ee1a4c4"
            },
            {
              "last_affected": "45ac4d019475df03562fe0ac54eb67e1d1de0ca7"
            },
            {
              "last_affected": "462196e6b4a47f924293a0e26b8e9c23d37ac26f"
            },
            {
              "last_affected": "1669b17d3a1a1fd824308544ca0ec02a2a4f50ea"
            },
            {
              "last_affected": "64db5c575d9c5536bd273a890f50777ad1ca7c13"
            },
            {
              "last_affected": "801bd5138ce31aa0d906fa4e2eabfc599d74e793"
            },
            {
              "last_affected": "9e560d11aad028de74addc0d1edfefa5667884f4"
            },
            {
              "last_affected": "c7aef0a945f9b6fb6d3f91716a21dfe2f4ea635f"
            },
            {
              "last_affected": "8e82f2a04a238c54ba91e553e9a8452e6d405965"
            },
            {
              "last_affected": "bfbde883af33397943df68a3ae01847a634d33bf"
            },
            {
              "last_affected": "6b951a6928811507d493303b2878e848c077b471"
            },
            {
              "last_affected": "566b74a0e19b9aa610f4931e5bfd339bcf8e9147"
            },
            {
              "last_affected": "3266b35bbe21c68dea0dc7ccd991eb028e6d360c"
            },
            {
              "last_affected": "2f33be817cbce6ad7a36f27dd7ada9219f13584c"
            },
            {
              "last_affected": "e052859759b34d0e05ce0f17244873e5cd7b457b"
            },
            {
              "last_affected": "315ee3fe75dade912b48a21ceec9ccda0230d937"
            },
            {
              "last_affected": "0c9211798fc80d5c9cc9bcdc8e11eb485c9c1c5b"
            },
            {
              "last_affected": "5a1fc8d33808d7b22f57bdf9403cda7ff07b0670"
            },
            {
              "last_affected": "e9db32a09af03f27e86d1251a9e68e9b7486d371"
            },
            {
              "last_affected": "53cdc2c963e33bc0cc1a51ad2df79396202e07f8"
            },
            {
              "last_affected": "b81e0b07784dc4c1e8d0a86194b9d28776d071c0"
            },
            {
              "last_affected": "b8d1366852fd0034374c5de1e4968c7a224f77cc"
            },
            {
              "last_affected": "2cfac302fbeec68f1727cba3d1705e16f02220ad"
            },
            {
              "last_affected": "2e9b725f67d49a9d7a1f053fe52dd4920c9ab1ad"
            },
            {
              "last_affected": "9cd755e1d768bbf228e7c9faf223b7459f7e0105"
            },
            {
              "last_affected": "aa73eb47bc8583070734696b25b34ad54c2c1f5e"
            },
            {
              "last_affected": "72c2cac8f0ac3a89c21d00b6c6e36fe6c6a8e62b"
            },
            {
              "last_affected": "69248b58f649e35b09a126c12781353e3471f5c6"
            },
            {
              "last_affected": "885ce31401b6789c959131754b1e5ae518964072"
            },
            {
              "last_affected": "521bbbe29928f9bc1c61306df612e856d45cbe5a"
            },
            {
              "last_affected": "f3294d9d86e6a7915a967efff2842089b8b0d071"
            },
            {
              "last_affected": "4258dc02d86e7e4de9f795a1af3a0bc6732d4ab5"
            },
            {
              "last_affected": "196677150f711a96c38ed123e621f1d4e995b2e5"
            },
            {
              "last_affected": "432eb5f5c254ee8383b2522ce597c9219877923e"
            },
            {
              "last_affected": "eb8138405a3f747f2c236464932f72e918946f68"
            },
            {
              "last_affected": "cb013830383f1ccc9757aba36bc32df5ec281c02"
            },
            {
              "last_affected": "4d6bd91ab33328c6d27eddc32e064defc02dc4fd"
            },
            {
              "last_affected": "d6c21c8eec597a925d2b647cff3d58ac69de01a0"
            },
            {
              "last_affected": "62c07b5743490ce373910f469abc8cdc759bec2b"
            },
            {
              "last_affected": "c514af5a4f5ac3ce724065cc6a8e009373436f78"
            },
            {
              "last_affected": "3ea76790571c1f7cf1bed34fabffd3cc20ad3dd3"
            },
            {
              "last_affected": "8839c05fba1f8415eec17eff8ac60cc3a50eb51e"
            },
            {
              "last_affected": "2679562dc7685674998f2841811d361400ae0d19"
            },
            {
              "last_affected": "54b636f14546d3fde9f9c67c3b32701d78563161"
            },
            {
              "last_affected": "d957e2189fdc73cef0ff3d1fb58043d354754449"
            },
            {
              "last_affected": "25df50aa3392ecdbf2b8256b93b30558e8b3a810"
            },
            {
              "last_affected": "a7135ac3c3d825ec9f4919ee0212434e01e76b4c"
            },
            {
              "last_affected": "44b9b4d4f56d6f6de92c89636994c03984e9cd01"
            },
            {
              "last_affected": "95c717bbd9c327c38b4efcc37d5cda29b8ee2a36"
            },
            {
              "last_affected": "3c561c657c2f0e553b19115a506592a8bbd744bc"
            },
            {
              "last_affected": "8986c86e1ef297e95518ae4695339f2d64d913cf"
            },
            {
              "last_affected": "9ce6d0d52821c6e33506cb173f0e27c68014e60e"
            },
            {
              "last_affected": "f2cb3a01192d36395d16acec6cdb93446ca6fd45"
            },
            {
              "last_affected": "79e63a53bb9598af863b0afe49ad662795faeef4"
            },
            {
              "last_affected": "cf93a7b364a70b56150cf6ea77492b799ec02a45"
            },
            {
              "last_affected": "67fe54d918a3b42a24cb7f5db81514c10e239735"
            },
            {
              "last_affected": "9819cec61b00cc872136ea5faf469627b3b87e69"
            },
            {
              "last_affected": "8f995e2e0022292374fc99a2277069b08ad98b5c"
            },
            {
              "last_affected": "06bf874bbca0a5c600b210b5db920eff9f95f0d0"
            },
            {
              "last_affected": "e2ae32ff5f3ab6f0819590f61f248f17df12987f"
            },
            {
              "last_affected": "2c000d91f3c423cee0af44e8afc79b9d25a9e714"
            },
            {
              "last_affected": "1a7f66a3de2625d10f65415e6eb3e56067dc0555"
            },
            {
              "last_affected": "38e07886ed2792988217a2ffa482ce3a69ca92c2"
            },
            {
              "last_affected": "4feb6e6d035d5d66984957c8ca22bc9a05df527f"
            },
            {
              "last_affected": "22691f849ac959ffaa821a3ca7f746ee54bd5e52"
            },
            {
              "last_affected": "ff837422ee4ec7d6aea7750a40e30cba29db93e8"
            },
            {
              "last_affected": "9ce2d7001939b795b45a8ce7700d1a3dcde0475d"
            },
            {
              "last_affected": "303bfc1024d948a5ba134ccfc106f82c0b4fd675"
            },
            {
              "last_affected": "202aa9f7758636730299b86715d924f54468a908"
            },
            {
              "last_affected": "df5169fa35f31ebe10893f2a3416ec8e8d8faa20"
            },
            {
              "last_affected": "3fed9acaef45ac8b99ceecc38afbed3494e2d3ef"
            },
            {
              "last_affected": "4f041c9d6e61829310eb0715d8edb2a232478123"
            },
            {
              "last_affected": "2bf90d071016e279796e789f0ac223d635671a41"
            },
            {
              "last_affected": "0966b324d911423c81351fb12e9219f71cd63be8"
            },
            {
              "last_affected": "f77e89c5d20db09eaebf378ec036a7e796932810"
            },
            {
              "last_affected": "70812c2f32fc5734bcbbe572b9f61c380433ad6a"
            }
          ],
          "repo": "https://github.com/curl/curl",
          "type": "GIT"
        }
      ]
    }
  ],
  "database_specific": {
    "cna_assigner": "curl",
    "osv_generated_from": "unknown"
  },
  "details": "libcurl's ASN1 parser code has the `GTime2str()` function, used for parsing an\nASN.1 Generalized Time field. If given an syntactically incorrect field, the\nparser might end up using -1 for the length of the *time fraction*, leading to\na `strlen()` getting performed on a pointer to a heap buffer area that is not\n(purposely) null terminated.\n\nThis flaw most likely leads to a crash, but can also lead to heap contents\ngetting returned to the application when\n[CURLINFO_CERTINFO](https://curl.se/libcurl/c/CURLINFO_CERTINFO.html) is used.",
  "id": "CVE-2024-7264",
  "modified": "2025-11-03T22:32:51.400Z",
  "published": "2024-07-31T08:08:14.585Z",
  "references": [
    {
      "type": "WEB",
      "url": "http://www.openwall.com/lists/oss-security/2024/07/31/1"
    },
    {
      "type": "WEB",
      "url": "https://curl.se/docs/CVE-2024-7264.html"
    },
    {
      "type": "WEB",
      "url": "https://curl.se/docs/CVE-2024-7264.json"
    },
    {
      "type": "FIX",
      "url": "https://github.com/curl/curl/commit/27959ecce75cdb2809c0bdb3286e60e08fadb519"
    },
    {
      "type": "WEB",
      "url": "https://hackerone.com/reports/2629968"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2024-7264"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.netapp.com/advisory/ntap-20240828-0008/"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.netapp.com/advisory/ntap-20241025-0006/"
    },
    {
      "type": "ADVISORY",
      "url": "https://security.netapp.com/advisory/ntap-20241025-0010/"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:L/UI:N/S:U/C:L/I:L/A:L",
      "type": "CVSS_V3"
    }
  ],
  "summary": "ASN.1 date parser overread"
}
---

[TestCVE5Snapshot/CVE-2026-20912.json - 1]
{
  "affected": [
    {
      "ranges": [
        {
          "database_specific": {
            "extracted_events": [
              {
                "introduced": "0"
              },
              {
                "last_affected": "1.25.3"
              }
            ],
            "source": "AFFECTED_FIELD"
          },
          "events": [
            {
              "introduced": "0"
            },
            {
              "last_affected": "9a7cfd8620989d9de6dc4ca0c95d9fd42c1768ed"
            }
          ],
          "repo": "https://github.com/go-gitea/gitea",
          "type": "GIT"
        }
      ]
    }
  ],
  "aliases": [
    "GHSA-vfmv-f93v-37mw"
  ],
  "database_specific": {
    "cna_assigner": "Gitea",
    "cwe_ids": [
      "CWE-284",
      "CWE-639"
    ],
    "osv_generated_from": "unknown"
  },
  "details": "Gitea does not properly validate repository ownership when linking attachments to releases. An attachment uploaded to a private repository could potentially be linked to a release in a different public repository, making it accessible to unauthorized users.",
  "id": "CVE-2026-20912",
  "modified": "2026-01-23T21:53:41.649Z",
  "published": "2026-01-22T22:01:52.026Z",
  "references": [
    {
      "type": "ADVISORY",
      "url": "https://blog.gitea.com/release-of-1.25.4/"
    },
    {
      "type": "FIX",
      "url": "https://github.com/go-gitea/gitea/pull/36320"
    },
    {
      "type": "FIX",
      "url": "https://github.com/go-gitea/gitea/pull/36355"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/go-gitea/gitea/releases/tag/v1.25.4"
    },
    {
      "type": "ADVISORY",
      "url": "https://github.com/go-gitea/gitea/security/advisories/GHSA-vfmv-f93v-37mw"
    },
    {
      "type": "ADVISORY",
      "url": "https://nvd.nist.gov/vuln/detail/CVE-2026-20912"
    }
  ],
  "schema_version": "1.7.3",
  "severity": [
    {
      "score": "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:N",
      "type": "CVSS_V3"
    }
  ],
  "summary": "Gitea: Cross-Repository Authorization Bypass via Release Attachment Linking Leads to Private Attachment Disclosure"
}
---
